--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=e-commerce
 
+#retrive
+
 #connection information
 spring.datasource.url=jdbc:mysql://localhost/e_commerce
 spring.datasource.username=root
