--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,26 @@
 spring.application.name=e-commerce
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=${PORT:8080}
 
-#retrive
+# ===============================
+# DATABASE CONFIG (Railway MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#connection information
-spring.datasource.url=jdbc:mysql://localhost/e_commerce
-spring.datasource.username=root
-spring.datasource.password=root
-
-#Hibernate(Communicate related property)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
+# ===============================
+# JPA CONFIG
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Optional (helpful for debugging)
+spring.datasource.initialization-mode=always
 
 
 
