change application property for db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,21 @@
 spring.application.name=e-commerce
-# ===============================
-# SERVER CONFIG
-# ===============================
+
+
+# Server config
 server.port=${PORT:8080}
 
-# ===============================
-# DATABASE CONFIG (Railway MySQL)
-# ===============================
+# Database config (Railway MySQL)
 spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA CONFIG
-# ===============================
+# JPA config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Optional (helpful for debugging)
+# Optional for debugging
 spring.datasource.initialization-mode=always
 
 
